# HaskellPlay

./: HaskellPlay.cabal  stack.yaml
app/: AST.hs  Compiler.hs  CorePrelude.hs  Evaluator.hs  Heap.hs  Lexer.hs  Main.hs  Parser.hs  ParserCombinator.hs  PrettyPrint.hs  Program.hs
src/: AST.hs  Compiler.hs  CorePrelude.hs  Evaluator.hs  Heap.hs  Lexer.hs  MarkScanGC.hs  Parser.hs  ParserCombinator.hs  PrettyPrint.hs  Program.hs  TwoSpaceGC.hs  TypeUtil.hs  Util.hs
src/GMachine/: Compiler.hs  Evaluator.hs  Printer.hs  Program.hs  Util.hs
src/ParallelGMachine/: Compiler.hs  Evaluator.hs  Printer.hs  Program.hs  SetterTH.hs  Util.hs
src/TIM/: Compiler.hs  Evaluator.hs  Printer.hs  Program.hs  Util.hs
src/TemplateInstantiation/: Compiler.hs  CorePrelude.hs  Evaluator.hs  MarkScanGC.hs  Program.hs  TwoSpaceGC.hs
test/: EvaluatorTest.hs  LexerTest.hs  Main.hs  ParserCombinatorTest.hs  ParserTest.hs  ProgramLoader.hs  TypeUtil.hs
test/ExampleProgram/: arith-0.cl  arith-1.cl  arith-2.cl  arith-3.cl  arith-4.cl  arith-5.cl  basic-0.cl  basic-1.cl  basic-2.cl  basic-3.cl  basic-4.cl  data-0.cl  data-1.cl  let-0.cl  let-1.cl  let-2.cl
