cabal-version:      2.4
name:               HaskellPlay
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             YigaoFan
maintainer:         fanyigao@qq.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library HaskellPlayLib
    exposed-modules:
        Lexer
        Parser
        ParserCombinator
        AST
    default-language: Haskell2010
    build-depends:    base
    hs-source-dirs:   app
    
executable HaskellPlay
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules:
        Lexer
        ParserCombinator
        Parser
        AST
        PrettyPrint
        CorePrelude
        Compiler
        Evaluator
        Program

test-suite HaskellPlayTest    
    type:       exitcode-stdio-1.0
    main-is:    Main.hs
    hs-source-dirs:   test
    build-depends: base, HUnit, HaskellPlayLib
    default-language: Haskell2010
    